tests/lean/ctx.lean.expected.out
don't know how to synthesize placeholder
ctx.lean:3:0: error: failed to add declaration 'foo' to environment, value has metavariables
remark: set 'formatter.hide_full_terms' to false to see the complete term
  ?M_1
